Fixing CSS to wrap infoboxes on the profile screen.

--- a/public/css/member.css
+++ b/public/css/member.css
@@ -1,8 +1,8 @@
 #memberinfo {
     display: -webkit-flex;
     display:         flex;
-    -webkit-flex-flow: row;
-            flex-flow: row;    
+    -webkit-flex-flow:  row wrap;
+            flex-flow:  row wrap;
 }
 
 .infobox {
